# researchflow

./: .env.example  .gitignore  README.md  check_db.py  demo_integration.py  main.py  pyproject.toml  requirements.txt  run_full_generation.py  test_skills.py
agents/: __init__.py  academic_editor.py  agent_factory.py  base_agent.py  base_agent_v2.py  bias_auditor.py  citation_manager.py  consistency_checker.py  consistency_validator.py  critic.py  data_extractor.py  fact_checker.py  fact_checker_v2.py  gap_identifier.py  literature_scout.py  llm_client.py  meta_analyst.py  methodology_validator.py  multi_evaluator.py  multi_evaluator_v2.py  request_models.py  research_plan_evaluator_agent.py  research_plan_writer_agent.py  researcher.py  researcher_v2.py  skill_loader.py  synthesizer.py  terminology_guardian.py  visualizer.py  writer.py  writer_v2.py
config/: __init__.py  models_config.py  quality_thresholds.py  research_plan_evaluation.py  research_plan_sections.py  sections_config.py  state_manager.py
core/: __init__.py  container.py  interfaces.py  rate_limiter.py  retry.py
docs/: AGENT_AUDIT_Full_Quality_Assessment.md  ARCHITECTURE_PLAN.md  CHANGELOG_v2.0.md  CRITICAL_ANALYSIS_Research_Plan_Sections.md  CRITICAL_REVIEW_REPORT.md  CRITIC_REVIEW_EvaluatorAgent_Phase1.md  CRITIC_REVIEW_EvaluatorAgent_PostFix.md  CRITIC_REVIEW_Phase1_Step1_Configs.md  CRITIC_REVIEW_Phase1_Step1_PostTest.md  CRITIC_REVIEW_WriterAgent_Phase1.md  CRITIC_REVIEW_WriterAgent_PostFix.md  GAP_DETECTION_WORKFLOW.md  IMPLEMENTATION_PLAN_Research_Plan_Module.md  IMPROVEMENTS_IMPLEMENTED.md  (+4 more)
(+123 files in other folders)
